--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,10 @@
     {% include social-buttons.html %}
 
     <p><br><br></p>
-
+	    <div class="container text-center">
+        Page created using <a href="https://github.com/le4ker/personal-jekyll-theme" target="_blank">{ Personal }</a> Jekyll template
+    </div>
+	
 </footer>
 
 <p><br><br><br><br><br><br></p>
