--- a/_includes/social-buttons.html
+++ b/_includes/social-buttons.html
@@ -1,9 +1,14 @@
 <!-- Social Buttons Start -->
 
-<ul class="list-inline social-buttons">
+<!-- <ul class="list-inline social-buttons"> -->
+    <!-- {% for network in site.social %} -->
+    <!-- <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }} style="font-size:40px;color:#00cdff""></i></a></li> -->
+    <!-- {% endfor %} -->
+<!-- </ul> -->
+
+<ul class="list-inline social-icons">
     {% for network in site.social %}
-    <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }} fa-fw"></i></a></li>
+    <li><a href="{{ network.url }}" target="_blank"><img src="/img/social/{{ network.title }}.svg"></i></a></li>
     {% endfor %}
 </ul>
-
 <!-- Social Buttons End -->
