--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -325,6 +325,29 @@ ul.social-buttons li a {
     }
 }
 
+ul.social-icons li a {
+    display: block;
+    width: 43.5px;
+    height: 44px;
+    border-radius: 100%;
+    font-size: 20px;
+    line-height: 40px;
+    outline: 0;
+    color: $social-buttons-color;
+    background-color: $social-buttons-color;
+
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+
+    &:hover,
+    &:focus,
+    &:active {
+        color: #222;
+        background-color: darken($social-buttons-color, 30%);
+    }
+}
+
 footer {
     padding: 50px 0;
     text-align: center;
