--- a/_includes/social-buttons.html
+++ b/_includes/social-buttons.html
@@ -8,7 +8,7 @@
 
 <ul class="list-inline social-icons">
     {% for network in site.social %}
-    <li><a href="{{ network.url }}" target="_blank"><img src="/img/social/{{ network.title }}.svg"></i></a></li>
+    <li><a href="{{ network.url }}" target="_blank"><img src="/img/social/{{ network.title }}.png" size= 40></i></a></li>
     {% endfor %}
 </ul>
 <!-- Social Buttons End -->
