--- a/_includes/social-buttons.html
+++ b/_includes/social-buttons.html
@@ -2,13 +2,13 @@
 
 <!-- <ul class="list-inline social-buttons"> -->
     <!-- {% for network in site.social %} -->
-    <!-- <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }} style="font-size:40px;color:#00cdff""></i></a></li> -->
+    <!-- <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }}></i></a></li> -->
     <!-- {% endfor %} -->
 <!-- </ul> -->
 
 <ul class="list-inline social-icons">
     {% for network in site.social %}
-    <li><a href="{{ network.url }}" target="_blank"><img src="/img/social/{{ network.title }}.png" size= 40></i></a></li>
+    <li><a href="{{ network.url }}" target="_blank"><img src="/img/social/{{ network.title }}.png"></i></a></li>
     {% endfor %}
 </ul>
 <!-- Social Buttons End -->
