--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,10 +1,12 @@
 
 <!-- Contact Start -->
-
-<section id="{{ page.section-type }}" class="container content-section text-center">
+<section id="{{ page.section-type }}">
+<div class="text-image">
+<div class="parallax"></div><div class="centered"><h1> CONTACT </h1></div>
+</div>
+<div class="container content-section text-center">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-
       {{ page.content | markdownify }}
 
       {% if site.email1 %}
@@ -50,6 +52,7 @@
       {% endif %}
 
     </div>
+  </div>
   </div>
 </section>
 
