--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
     <p><br><br></p>
 	    <div class="container text-center">
-        Page created using <a href="https://github.com/le4ker/personal-jekyll-theme" target="_blank">{ Personal }</a> Jekyll template
+        Page based on <a href="https://github.com/le4ker/personal-jekyll-theme" target="_blank">{ Personal }</a> Jekyll template
     </div>
 	
 </footer>
