--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 
 <header class="intro">
   <div class="intro-body">
+  <div class="intro-parallax"></div>
     <div class="container">
       <div class="row">
           <div class="col-md-10 col-md-offset-1">
@@ -20,6 +21,7 @@
           </div>
         </div>
     </div>
+		{% include intro.html %}
   </div>
 </header>
 
