--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,11 +1,13 @@
 
 <!-- Projects Start -->
+<section id="{{ page.section-type }}">
+<div class="text-image">
+<div class="parallax"></div><div class="centered"><h1> PROJECTS </h1></div>
+</div>
+<div class="container">
 
-<section id="{{ page.section-type }}" class="container content-section text-center">
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      {{ page.content | markdownify }}
-    </div>
+      {{ page.content }}
+
   </div>
 </section>
 
