--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,7 +1,10 @@
 
 <!-- Timeline Start -->
-
-<section id="{{ page.section-type }}" class="container content-section text-center">
+<section id="{{ page.section-type }}">
+<div class="text-image">
+<div class="parallax"></div><div class="centered"><h1> TIMELINE </h1></div>
+</div>
+<div class="container content-section text-center">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
 
@@ -39,6 +42,7 @@
         </li>
       </ul>
     </div>
+  </div>
   </div>
 </section>
 
