--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -166,13 +166,16 @@ a {
     background: url({{ site.background-img }}) no-repeat bottom center scroll;
     {% endif %}
     background-color: $header-background-color;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
     .intro-body {
         display: table-cell;
-        vertical-align: middle;
+        vertical-align: top;
         .brand-heading {
             font-size: 40px;
         }
@@ -232,11 +235,12 @@ a {
 }
 
 .content-section {
-    margin-top: 100px;
-    padding-top: 100px;
+    margin-top: 50px;
+	margin-bottom: 200px;
+    padding-top: 50px;
     @media(min-width:767px) {
-        margin-top: 125px;
-        padding-top: 125px;
+        margin-top: 50px;
+        padding-top: 50px;
     }
     /* Added in { Personal } for responsive images in posts and section contents */
     img {
@@ -302,6 +306,38 @@ a {
 }
 
 /* Added in { Personal } */
+
+.game-section {
+    margin-top: 100px;
+	margin-bottom: 250px;
+	}
+.parallax {
+
+  background-image: url("../img/bg.png");
+
+  min-height: 200px; 
+  
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.text-image {
+  position: relative;
+  text-align: center;
+  color: white;
+  font-size: 60px;
+  font-family: Arial,sans-serif;
+  font: bold;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 ul.social-buttons li a {
     display: block;
     width: 40px;
