--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -308,8 +308,12 @@ a {
 /* Added in { Personal } */
 
 .game-section-left {
-    margin-top: 80px;
-	  margin-bottom: 250px;
+    margin-top: 50px;
+	  margin-bottom: 100px;
+    @media (min-width:768px){
+      margin-top: 80px;
+      margin-bottom: 250px;
+    }
   	img {
           margin-left: auto;
           margin-right: auto;
@@ -329,8 +333,12 @@ a {
 	}
 
   .game-section-right {
-      margin-top: 100px;
-  	  margin-bottom: 260px;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    @media (min-width:768px){
+      margin-top: 80px;
+      margin-bottom: 250px;
+    }
     	img {
             margin-left: auto;
             margin-right: auto;
